# LocalPilot

./: .dockerignore  .gitignore  Dockerfile  README.md  RESEARCH_SUMMARY.md  analyze.py  browse.py  config.py  localpilot.yaml  make_figures.py  new_project.ps1  proposals_baseline_v2.jsonl  proposals_enhanced_v3.jsonl  pyproject.toml  research_log_v3.md  results_baseline_v2.tsv  run_both.py  run_experiments.py  run_web_experiments.py  run_web_experiments2.py  run_web_experiments3.py  run_web_experiments4.py  run_web_experiments5.py  run_web_experiments6.py  train.py
experiments/: run_automated_v2.py  run_baseline.py  run_baseline_v2.py  run_both.py  run_enhanced_v3.py  run_enhanced_v4.py  run_web.py
figures/: yahpo_results.npz
localpilot/: __init__.py  analyze.py  browse.py  config.py
paper/: main.tex  references.bib
results/: make_figures.py  results_enhanced_v3.tsv
scripts/: push_to_localpilot.ps1
tests/: test_devstral_refine.py  test_edge_cases.py  test_integration.py  test_relevance_scoring.py  test_screenshot_to_qwen.py  test_v4_agent_patterns.py
